# UFAZ-BSc

./: .gitignore  Computer_Science_for_Physics_and_Chemistry.ipynb  README.md
L0/: grade.c
L0/C/: .C.swp
L0/C/Array/: array.c  array1.c  array2.c  array4.c  array6.c  callarray.c  det.c  mode.c  np.c  palindrome.c  selection_sort.c  sprintf.c  statistics.c  string1.c  string2.c  transpose.c  zib.c
L0/C/Control/: armstrong.c  digit.c  digits.c  dowhile.c  numb_of_divisors.c  prime_divisors.c  sum.c  switch.c  vector_angle.c
L0/C/File_Processing/: .fig11_16.c.swp  fig11_03.c  fig11_07.c  fig11_11.c  fig11_12.c  fig11_15.c
L0/C/Function/: die.c  fibonacci.c  oyun.c  srand.c  variable.c
L0/C/Pointer/: fig07_04.c  fig07_11.c  fig07_12.c  fig07_13.c  fig07_16.c  fig07_20.c  fig07_26.c
L0/C/S02F/: libraryV1  libraryV1.c
L0/C/S02P01/: ex1.c  ex2  ex2.c  ex3  ex4  ex4.c
L0/C/S02P02/: ex2  ex3.c  ex4.c  exr1  exr1.c  exr3  exr4  macro  macro.c
L0/C/Structure/: complex.c  fig10_02.c  fig10_13.c  fig10_16.c  fig10_18.c
L0/C/TP_1/: ex10.1  ex10.3  ex10.3.c  ex10.4.c  ex2.c  ex3  ex4.c  ex5.c  ex6  ex7  ex8.c  ex9.c
L0/C/TP_2/: ex1.c  ex10.1.c  ex10.3  ex10.3.c  ex2  ex3.c  ex4  ex5.c  ex9  ex9.c
L0/C/TP_3/: ex1  ex4
L0/C/TP_5/: ex1  ex2.c  ex3  ex4.c  ex5
L0/C/TP_7/: command.txt  ex2  ex2.c  ex3  ex4  ex5.c  exam.c  product.txt
L0/C/TP_8/: ex1  ex2.c  integer.txt
L0/S1/bash/: trap
L0/S2/BMetro/: README.txt
L0/S2/C/: .fibonacci1.c.swp
L0/bash/: 1stprogram  bla  date  master  remind_20190
L0/bash/S01F/: ex6  ex8
L0/bash/S01P01/: ex1  ex3
L0/bash/S01P02/: ex6
L0/bash/array/: array2
L2/S2/DT/: CMakeLists.txt  test.txt
L2/S2/DT/Khaliq_Aghakarimov/: CMakeLists.txt  test.c
L2/S2/DT/Khaliq_Aghakarimov/string/: CMakeLists.txt  string.c  string.h
L2/S2/DT/cmake/: CMakeLists.txt
L2/S2/DT/cmake/include/: CMakeLists.txt  f.c
L2/S2/DT/cmake/src/: CMakeLists.txt  main.c
L2/S2/DT/cunit/: CMakeLists.txt  main_test.c
L2/S2/DT/cunit/proj/: CMakeLists.txt
L2/S2/DT/cunit/proj/include/: divide.h
L2/S2/DT/cunit/proj/src/: CMakeLists.txt  add.c  divide.c
L2/S2/DT/pw1/: CMakeLists.txt
L2/S2/DT/pw1/include/: circle.h  point.h  rectangle.h
L2/S2/DT/pw1/main/: CMakeLists.txt  main.c
L2/S2/DT/pw1/src/: CMakeLists.txt  circle.c  point.c  rectangle.c
L2/S2/DT/pw3/: a.out  main.c
L2/S2/DT/pw3_corrige/: CMakeLists.txt  main_calc.c  main_test.c  testing.c  testing.h
L2/S2/DT/pw3_corrige/pol/: CMakeLists.txt  numop.c  numop.h  polish.c  polish.h  stack.c  stack.h
(+1026 files in other folders)
